finished sections Finished the call section and footer, just need to fix the header part because i used hard code to make it align and didnt use flexbox

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ body{
     padding: 5px;
     margin-top: 10px;
     margin-bottom: 15px;
+    cursor: pointer;
     width: 100px
 }
 
@@ -133,4 +134,55 @@ body{
     text-align: right;
     font-size: 24px;
     font-weight: bold;
+}
+
+/* call to action section */
+.call {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Centers items vertically within the flex container */
+    background-color: #3882f6;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 250px;
+    margin-right: 250px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 100px;
+    padding-right: 100px;
+    border-radius: 10px;
+}
+
+.call-first-line {
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0; /* Removes default margin */
+}
+
+.call-second-line {
+    color: #F9FAF8;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.call-button {
+    background-color: #3882f6;
+    color: #E5E7EB;
+    border: 2px solid #E5E7EB;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 40px; /* Adjusts padding for better button size */
+    border-radius: 10px;
+    cursor: pointer; /* Changes cursor to pointer on hover */
+}
+
+
+/* footer */
+#footer{
+    text-align: center;
+    font-weight: bold;
+    background-color: #1f2937;
+    padding: 30px;
+    color: #E5E7EB;
 }
